moved style into template

--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,6 @@
   "dependencies": {
     "tangere": "TangereJs/tangere#master",
     "at-doc-viewer": "TangereJs/at-doc-viewer#master"
-  }
+  },
+  "version": "0.0.1.1"
 }
